Add IR tests